body overflow fix

--- a/acamar_web/static-preview/acamar_web/main.css
+++ b/acamar_web/static-preview/acamar_web/main.css
@@ -8723,7 +8723,8 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-smoothing: antialiased; }
+  font-smoothing: antialiased;
+  overflow-x: hidden; }
 
 /* HTML5 display definitions
    ========================================================================== */
